# steamgear-rs

./: Cargo.toml  README.md  build.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
src/: api.rs  client.rs  lib.rs  prelude.rs  utils.rs
src/apps/: callbacks.rs  mod.rs  structs.rs
src/core/: callback.rs  client.rs  conv.rs  enums.rs  mod.rs  server.rs  structs.rs
src/utils/: callbacks.rs  client.rs  mod.rs
steamgear/: Cargo.toml
steamgear-sys/: Cargo.toml  build.rs
steamgear-sys/src/: lib.rs  linux_bindings.rs  windows_bindings.rs
steamgear/src/: api.rs  lib.rs
steamgear/src/apps/: callbacks.rs  mod.rs  structs.rs
steamgear/src/core/: callback.rs  client.rs  conv.rs  enums.rs  server.rs  structs.rs
steamgear/src/friends/: mod.rs
steamgear/src/utils/: callbacks.rs  client.rs  mod.rs
steamgear/tests/: test.rs
tests/: test.rs
