[package]
name = "steamgear"
version = "0.1.0"
edition = "2021"

[dependencies.async-channel]
version = "2.3.1"

[dependencies.dashmap]
version = "5.5.3"

[dependencies.futures-core]
version = "0.3.30"

[dependencies.parking_lot]
version = "0.12.3"

[dependencies.steamgear-sys]
path = "./steamgear-sys"
